--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -9,7 +9,7 @@
   <body>
     <h1>Sign Up</h1>
 
-    <form action="/auth" method="POST">
+    <form action="/auth/signup" method="POST">
       Name: <input type="text" name="name" /><br />
       <br />
       Username: <input type="text" name="username" /> <br />
