--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -10,6 +10,7 @@
     <nav>
       <a href="/auth/signup">Sign Up</a>
       <a href="/auth/login">Log In</a>
+      <a href="/auth/logout">Log Out</a>
     </nav>
   </body>
 </html>
